--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -96,6 +96,7 @@
   "global.labels.remove": "Remove",
   "global.labels.rewardsLabel": "Rewards",
   "global.labels.save": "Save",
+  "global.labels.shelleyLabel": "Shelley",
   "global.labels.upgrade": "Upgrade",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
