--- a/app/i18n/locales/zh-Hant.json
+++ b/app/i18n/locales/zh-Hant.json
@@ -428,7 +428,7 @@
   "wallet.dashboard.empty.title": "You have not delegated your ADA yet",
   "wallet.dashboard.epochEndTitle": "Time until Epoch end",
   "wallet.dashboard.epochProgress": "Epoch progress",
-  "wallet.dashboard.epochTooltip": "Note: only the first reward after delegating will take 2 epochs. Afterwards, rewards come every epoch",
+  "wallet.dashboard.epochTooltip": "Note: only the first reward after delegating will take {numEpochs} epochs. Afterwards, rewards come every epoch.",
   "wallet.dashboard.graph.dayToggleLabel": "Day (UTC)",
   "wallet.dashboard.graph.epochAxisLabel": "Epoch ({epochLength} days)",
   "wallet.dashboard.graph.singleEpochAxisLabel": "Epoch (1 day)",
@@ -438,7 +438,6 @@
   "wallet.dashboard.lessthan.header": "There are many reasons why you could be getting less rewards than you expected. We list some common ones here",
   "wallet.dashboard.lessthan.reason1": "A stake pool you are delegating to either was or is offline so it did not make any blocks",
   "wallet.dashboard.lessthan.reason2": "Not enough time has passed since you delegated",
-  "wallet.dashboard.lessthan.reason3": "The amount earned was rounded down to 0 (if you delegated a very small amount)",
   "wallet.dashboard.lessthan.reason4": "A stake pool you are delegating to charges a flat fee greater than the pool's total reward",
   "wallet.dashboard.lessthan.reason5": "A stake pool you are delegating to was or is saturated",
   "wallet.dashboard.lessthan.title": "Missing Reward Explanation",
@@ -472,6 +471,7 @@
   "wallet.dashboard.summary.rewardsTitle": "Total Rewards",
   "wallet.dashboard.summary.title": "Your Summary",
   "wallet.dashboard.upcomingRewards.at": "at",
+  "wallet.dashboard.upcomingRewards.endOfEpoch": "End of epoch",
   "wallet.dashboard.upcomingRewards.noRewards": "no rewards will be earned on this epoch",
   "wallet.dashboard.upcomingRewards.title": "Upcoming Rewards",
   "wallet.dashboard.warning.pendingTx": "Staking dashboard information will update once your pending transaction is confirmed",
