--- a/app/i18n/locales/pt-BR.json
+++ b/app/i18n/locales/pt-BR.json
@@ -45,7 +45,7 @@
   "app.errors.unableToLoad": "Não foi possível carregar!",
   "app.errors.unexpectedError": "Algo inesperado aconteceu. Por favor tente novamente.",
   "app.errors.unknowError": "Erro desconhecido.",
-  "crash.screen.title": "Yoroi crashed",
+  "crash.screen.title": "Yoroi travou",
   "daedalusTransfer.error.noTransferTxError": "Não há transação a ser enviada.",
   "daedalusTransfer.error.transferFundsError": "Não é possível transferir fundos.",
   "daedalusTransfer.error.webSocketRestoreError": "Erro ao restaurar endereços da blockchain.",
@@ -62,7 +62,7 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "Buscando endereços",
   "daedalusTransfer.waiting.title.label": "Carteira Daedalus está sendo restaurada",
   "daedalusTransfer.waiting.warning": "Isso pode levar muito tempo ou falhar em conexões de baixa qualidade",
-  "decryption.label": "Decryption password",
+  "decryption.label": "Senha de decifração",
   "global.blog.learnMore": "Você pode ler nosso {blogLink} para saber mais.",
   "global.contact": "Contate o suporte",
   "global.copyTooltipMessage": "Copiado",
@@ -71,10 +71,10 @@
   "global.errors.invalidRepeatPassword": "Não corresponde.",
   "global.errors.invalidWalletName": "O nome da wallet precisa conter de 1 á 40 caracteres.",
   "global.errors.invalidWalletPassword": "A senha para pagamentos deve conter pelo menos 10 caracteres.",
-  "global.invalidKeyFormat.label": "Invalid key. Should be hexadecimal-encoded.",
-  "global.invalidKeyLength.label": "Invalid key. Should be {length} characters long.",
-  "global.invalidKeyLength2.label": "Invalid key. Should one of {lengths}.",
-  "global.key.label": "Key",
+  "global.invalidKeyFormat.label": "Chave Inválida. Deve ser código hexadecimal.",
+  "global.invalidKeyLength.label": "Chave inválida. Deve ter {length} carácteres.",
+  "global.invalidKeyLength2.label": "Chave inválida. Deve ser um de {lengths}.",
+  "global.key.label": "Chave",
   "global.labael.undelegate": "Remover delegação",
   "global.label.addToAddressbook": "Adicionar ao livro de endereços",
   "global.label.allow": "Permitir",
@@ -105,10 +105,10 @@
   "global.labels.rewardsLabel": "Recompensas",
   "global.labels.save": "Salvar",
   "global.labels.shelleyLabel": "Shelley",
-  "global.labels.spendingKey": "Spending key",
-  "global.labels.spendingKeyHash": "Spending key hash",
-  "global.labels.stakingKey": "Staking key",
-  "global.labels.stakingKeyHash": "Staking key hash",
+  "global.labels.spendingKey": "Chave de gasto",
+  "global.labels.spendingKeyHash": "Hash da chave de gasto",
+  "global.labels.stakingKey": "Chave de Stake",
+  "global.labels.stakingKeyHash": "Hash da chave de Stake",
   "global.labels.upgrade": "Upgrade",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
@@ -307,7 +307,7 @@
   "transfer.legacy.daedalus.12word": "12-palavras carteira Daedalus",
   "transfer.legacy.daedalus.title": "Carteira Legacy Daedalus",
   "transfer.legacy.icarus.title": "Carteira Icarus/Yoroi",
-  "transfer.rewards.key.label": "Rewards from private key",
+  "transfer.rewards.key.label": "Recompensas da chave privada",
   "transfer.rewards.paper.label": "Recompensas vindas da carteira de papel",
   "transfer.rewards.regular.label": "Recompensas vindas da frase de recuperação",
   "transfer.summary.addressFrom.label": "De",
@@ -432,7 +432,7 @@
   "wallet.dashboard.empty.title": "Você não delegou a sua ADA ainda",
   "wallet.dashboard.epochEndTitle": "Tempo até o fim da Época",
   "wallet.dashboard.epochProgress": "Progresso da Época",
-  "wallet.dashboard.epochTooltip": "Note: only the first reward after delegating will take {numEpochs} epochs. Afterwards, rewards come every epoch.",
+  "wallet.dashboard.epochTooltip": "Nota: Apenas as primeiras recompensas irão levar {numEpochs} para serem pagas. Após isso, irá receber a no início de cada época.",
   "wallet.dashboard.graph.dayToggleLabel": "Dia (UCT)",
   "wallet.dashboard.graph.epochAxisLabel": "Época h ({epochLength} dias)",
   "wallet.dashboard.graph.singleEpochAxisLabel": "Época (1 dia)",
@@ -475,7 +475,7 @@
   "wallet.dashboard.summary.rewardsTitle": "Total de recompensas",
   "wallet.dashboard.summary.title": "Seu Resumo",
   "wallet.dashboard.upcomingRewards.at": "às",
-  "wallet.dashboard.upcomingRewards.endOfEpoch": "End of epoch",
+  "wallet.dashboard.upcomingRewards.endOfEpoch": "Fim da época",
   "wallet.dashboard.upcomingRewards.noRewards": "nenhuma recompensa será recebida nesta época",
   "wallet.dashboard.upcomingRewards.title": "Próximas Recompensas",
   "wallet.dashboard.warning.pendingTx": "As informações do painel de stake serão atualizadas assim que sua transação pendente for confirmada",
@@ -504,10 +504,10 @@
   "wallet.hw.ledger.common.error.103": "O Dispositivo Ledger está bloqueado, por favor desbloqueie-o e tente novamente.",
   "wallet.hw.ledger.common.error.104": "O prazo de utilização do dispositivo Ledger acabou, por favor tente novamente.",
   "wallet.hw.ledger.common.error.105": "Erro de rede. Por favor cheque sua conexão com a internet.",
-  "wallet.includeKey.explanationLine1": "Do you want to include your wallet's <strong>public</strong> key in the error logs?",
-  "wallet.includeKey.explanationLine2": "It will allow support staff to see your wallet's transaction history, but they will <strong>not</strong> be able to spend or move your funds in any way (private key is <strong>not</strong> included)",
-  "wallet.includeKey.withKeyLabel": "With key",
-  "wallet.includeKey.withoutKeyLabel": "Without key",
+  "wallet.includeKey.explanationLine1": "Você gostaria de incluir sua chave <strong>pública</strong> nas informações de erro?",
+  "wallet.includeKey.explanationLine2": "Isso irá permitir que funcionários do suporte vejam o histórico de suas transações, mas <strong>não</strong> conseguirão movimentar seus fundos de qualquer forma(chave privada <strong>não</strong> inclusa)",
+  "wallet.includeKey.withKeyLabel": "Com chave",
+  "wallet.includeKey.withoutKeyLabel": "Sem chave",
   "wallet.nav.addButton": "Adicionar nova carteira",
   "wallet.nav.allWalletsLabel": "Todas as cateiras",
   "wallet.nav.backButton": "Voltar para carteiras",
@@ -694,7 +694,7 @@
   "wallet.transaction.type.exchange": "Exchange",
   "wallet.transaction.type.intrawallet": "{currency} transação interna",
   "wallet.transaction.type.multiparty": "{currency} transação de múltiplas partes",
-  "wallet.transaction.withdraw": "Withdraw",
+  "wallet.transaction.withdraw": "Retirar",
   "wallet.transaction.withdrawalsLabel": "Retiradas",
   "wallet.transfer.cards.byron": "Carteira Byron-era",
   "wallet.transfer.cards.shelley": "Carteira era-Shelley",
@@ -718,7 +718,7 @@
   "yoroiTransfer.error.transferFundsError": "Não foi possível transferir os fundos.",
   "yoroiTransfer.error.walletChangedError": "A Wallet foi alterada. Por favor reconfirme sua transação.",
   "yoroiTransfer.errorPage.title.label": "A transferência de outra Wallet não foi possível",
-  "yoroiTransfer.form.instructions.stakingKEy.text": "Enter your staking key here and the spending password if the key is encrypted",
+  "yoroiTransfer.form.instructions.stakingKEy.text": "Entre sua chave de Stake aqui e senha de gastos se a chave estiver encriptada",
   "yoroiTransfer.form.instructions.step0.text": "Digite a frase de recuperação de 15 palavras utilizada no backup de sua outra wallet para restaurar o saldo e transferir todos os fundos para a wallet atual.",
   "yoroiTransfer.form.instructions.step0Paper.text": "Entre as 21 palavras de recuperação usadas para o backup da sua Yoroi Paper Wallet e sua senha da paper wallet para restaurar o saldo e transferir todos os fundos.",
   "yoroiTransfer.start.instructions.hardware": "Hardware wallet",
