--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -33,6 +33,7 @@
   "api.errors.noOutputsError": "Transaction requires at least 1 output, but no output was added",
   "api.errors.pendingTransactionError": "Error while updating pending transactions.",
   "api.errors.poolMissingApiError": "Could not find this pool. Double-check the ID and make sure the pool was not deregistered.",
+  "api.errors.rewardAddressEmpty": "Reward address is empty.",
   "api.errors.rollbackApiError": "Rollback was detected.",
   "api.errors.sendTransactionApiError": "Error received from server while sending transaction.",
   "api.errors.sendTransactionError": "Error received from api method call while sending transaction.",
@@ -717,7 +718,6 @@
   "yoroiTransfer.error.noTransferTxError": "There is no transfer transaction to send.",
   "yoroiTransfer.error.transferFundsError": "Unable to transfer funds.",
   "yoroiTransfer.error.walletChangedError": "The wallet has changed. Please re-confirm your transaction.",
-  "yoroiTransfer.errorPage.title.label": "Unable to transfer from another wallet",
   "yoroiTransfer.form.instructions.stakingKEy.text": "Enter your staking key here and the spending password if the key is encrypted",
   "yoroiTransfer.form.instructions.step0.text": "Enter the 15-word recovery phrase used to back up your other wallet to restore the balance and transfer all the funds to current wallet.",
   "yoroiTransfer.form.instructions.step0Paper.text": "Enter the 21-word recovery phrase used to back up your Yoroi Paper wallet and your paper password to restore the balance and transfer all the funds.",
