--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -466,7 +466,7 @@
   "wallet.delegation.transaction.success.explanation": "Track the status of the stake pool and the amount of time remaining to receive a reward from the Dashboard page",
   "wallet.delegation.transaction.success.title": "Successfully delegated",
   "wallet.deprecation.itnLine1": "The last ITN rewards were distributed on epoch 190.",
-  "wallet.deprecation.itnLine2": "Rewards can be claimed on mainnet once Shelley is released on mainnet.",
+  "wallet.deprecation.itnLine2": "Rewards can be claimed on mainnet",
   "wallet.hw.common.error.101": "Necessary permissions were not granted by the user. Please retry.",
   "wallet.hw.ledger.common.error.101": "Operation cancelled on Ledger device.",
   "wallet.hw.ledger.common.error.102": "Operation cancelled by user.",
