--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -455,6 +455,7 @@
   "wallet.dashboard.poolWarnings.suggested": "We suggest contacting the pool owner through the stake pool's webpage to ask about their behavior. Remember, you can change your delegation at any time without any interruptions in rewards.",
   "wallet.dashboard.poolWarnings.unknown": "Causes some unknown issue (look online for more info)",
   "wallet.dashboard.rewards.note": "The first reward is slower.",
+  "wallet.dashboard.rewards.unregistered": "Staking key isn't registered, so you won't get rewards",
   "wallet.dashboard.stakePool.age": "Age",
   "wallet.dashboard.stakePool.circleText": "Revenue",
   "wallet.dashboard.stakePool.cost": "Cost",
@@ -706,7 +707,9 @@
   "wallet.transfer.deregister.line1": "When withdrawing rewards, you also have the option to deregister the staking key",
   "wallet.transfer.deregister.line2": "Deregistering the staking key will give you back your deposit and undelegate the key from any pool",
   "wallet.transfer.deregister.line3": "Keeping the staking key will allow you to withdraw the rewards, but continue delegating to the same pool",
-  "wallet.transfer.deregister.line4": "You should NOT deregister if this staking key is used as a stake pool's reward account, as this will cause all pool operator rewards to be sent directly to the treasury",
+  "wallet.transfer.deregister.line4": "You should NOT deregister if this staking key is used as a stake pool's reward account, as this will cause all pool operator rewards to be sent back to the reserved",
+  "wallet.transfer.deregister.line5": "Deregistering means this key will no longer receive rewards until you re-register the staking key (usually by delegating to a pool again)",
+  "wallet.transfer.deregister.noNeedToDeregister": "You do NOT need to deregister to delegate to a different stake pool. You can change your delegation preference at any time",
   "wallet.transfer.deregister.title": "Also deregister the staking key?",
   "wallet.transfer.instruction": "Any ADA claimed will be transferred to your currently selected wallet",
   "wallet.undelegation.transaction.explanationLine1": "You do NOT need to undelegate before switching stake pools",
