--- a/app/i18n/locales/zh-Hans.json
+++ b/app/i18n/locales/zh-Hans.json
@@ -133,12 +133,12 @@
   "global.language.turkish": "Turkish",
   "global.passwordInstructionsPaperWallet": "注意: 纸钱包密码长度至少为<strong>10个字符</strong>。",
   "global.selectAsset.labael": "选择资产",
-  "global.publicKey.explanation": "Public keys allow seeing the wallet history for the wallet, but does <strong>not</strong> allow to spend or move the funds in any way (private key is <strong>not</strong> included)",
+  "global.publicKey.explanation": "公钥可以用于显示钱包的历史交易，但<strong>无法</strong>用于支付或转移其中的资金。",
   "global.staleTxnWarningLine1": "钱包自您创建此交易后已有变动。",
   "global.staleTxnWarningLine2": "您仍可以发送此交易但可能失败。",
   "global.uriExplanation": "这些功能使您只需单击URL，即可轻松与朋友和企业共享发票。",
   "global.uriSchemeTitleLabel": "Cardano付款网址",
-  "global.why": "This can be used to:",
+  "global.why": "这可用于：",
   "global.wrongNetwork.address": "地址错误。",
   "incorrectTime.line1": "警告：您计算机的时间和服务器时间不匹配。这可能会导致无法意料的结果。",
   "incorrectTime.line2": "时间差：",
@@ -479,7 +479,7 @@
   "wallet.dashboard.summary.delegatedTitle": "委托总量",
   "wallet.dashboard.summary.mangled.can": "{adaAmount} {ticker} 可以更正",
   "wallet.dashboard.summary.mangled.cannot": "{adaAmount} {ticker} 无法更正",
-  "wallet.dashboard.summary.mangled.line1": "Your wallet has {adaAmount} {ticker} with a different delegation preference.",
+  "wallet.dashboard.summary.mangled.line1": "您的钱包里 {adaAmount} {ticker} 有不同的委托。",
   "wallet.dashboard.summary.mangled.line2": "我们推荐通过 {transactionMessage} 来委托{ticker}",
   "wallet.dashboard.summary.mangled.makeTx": "进行一笔交易",
   "wallet.dashboard.summary.note": "比预期少",
@@ -532,7 +532,7 @@
   "wallet.navigation.receive": "接收",
   "wallet.navigation.send": "发送",
   "wallet.navigation.transactions": "交易",
-  "wallet.navigation.voting": "Voting",
+  "wallet.navigation.voting": "投票",
   "wallet.nowallet.subtitle": "请从右上方的下拉框中选择一个钱包",
   "wallet.nowallet.title": "未选择钱包",
   "wallet.problematic.explanation1": "你所选择的钱包{checksumTextPart} 检测到包含一些错误。",
@@ -714,7 +714,7 @@
   "wallet.transaction.type.multiparty": "{currency} 多方交易",
   "wallet.transaction.withdraw": "赎回",
   "wallet.transaction.withdrawalsLabel": "赎回",
-  "wallet.transaction.transactionMetadata": "Transaction Metadata",
+  "wallet.transaction.transactionMetadata": "交易元数据",
   "wallet.transfer.cards.byron": "Byron时期钱包",
   "wallet.transfer.cards.shelley": "Shelly时期钱包",
   "wallet.transfer.deregister.deregister": "取消注册",
@@ -727,7 +727,7 @@
   "wallet.transfer.deregister.noNeedToDeregister": "您无需取消注册委托密钥即可委托给其他权益池。您可以随时更改您的委托。",
   "wallet.transfer.deregister.title": "同时取消注册委托密钥？",
   "wallet.transfer.instruction": "所有的{ticker} 会转移到你目前选择的钱包中",
-  "wallet.transfer.subInstruction": "Learn more about Byron and Shelley eras and how to claim ADA on our",
+  "wallet.transfer.subInstruction": "了解关于Byron和Shelly时期的有关信息以及如何提取ADA",
   "wallet.undelegation.transaction.explanationLine1": "切换权益池之前，您无需先解除委托",
   "wallet.undelegation.transaction.explanationLine2": "撤销委托要在当前时代结束后的2个时代才能生效",
   "wallet.unsupported.subtitle": "所选的钱包不支持此功能",
@@ -742,7 +742,7 @@
   "yoroiTransfer.error.noTransferTxError": "没有要发送的交易。",
   "yoroiTransfer.error.transferFundsError": "无法转账。",
   "yoroiTransfer.error.walletChangedError": "钱包发生过了交易。请重新确认交易。",
-  "yoroiTransfer.form.instructions.stakingKEy.text": "Enter your staking key here and the spending password if the key is encrypted",
+  "yoroiTransfer.form.instructions.stakingKEy.text": "如果密钥被加密，在此输入委托密钥和支付密码",
   "yoroiTransfer.form.instructions.step0.text": "输入用于备份另一钱包的15个助记词来恢复钱包并将其中所有资金转移到当前Yoroi钱包。",
   "yoroiTransfer.form.instructions.step0Paper.text": "输入用于备份您的Yoroi 纸钱包的21字恢复短语，和您的纸密码以恢复余额并转移所有资金。",
   "yoroiTransfer.start.instructions.hardware": "硬件钱包",
@@ -757,26 +757,26 @@
   "yoroiTransfer.waiting.progressInfo.checkingAddresses": "正在检查资金地址",
   "yoroiTransfer.waiting.progressInfo.restoringAddresses": "正在获取地址",
   "yoroiTransfer.waiting.title.label": "正在恢复钱包",
-  "wallet.voting.dialog.step.confirm.line1": "Please enter the PIN as it will be used in a later step to complete the registration process inside the Catalyst Voting App.",
-  "wallet.voting.dialog.step.pin.line1": "Please write down this PIN as it will be used in a later step to complete the registration process inside the Catalyst Voting App.",
-  "wallet.voting.dialog.step.qr.lineTitle": "Use the Catalyst Voting App to scan the QR code",
-  "wallet.voting.dialog.step.qr.line2": "The following QR code is the generated certificate required by the Catalyst App to be able to participate in the voting process of Cardano.",
-  "wallet.voting.dialog.step.qr.line3": "Also we suggest to take a screenshot of it as a backup — you won’t be able to access this QR code after clicking Complete.",
-  "wallet.voting.dialog.step.register.line1": "Enter your spending password to be able to generate the required certificate for voting.",
-  "wallet.voting.lineTitle": "Any ADA registered in transaction to vote will be transfered from your currently selected wallet",
-  "wallet.voting.line2": "Before you begin, make sure to complete steps below",
-  "wallet.voting.line3": "Download the Catalyst Voting App.",
-  "wallet.voting.line4": "Open the Catalyst Voting App and click on the Complete registration button.",
-  "wallet.voting.dialog.step.trx.line1": "Confirm your spending password to register in the blockchain the certificate previously generated for voting.",
+  "wallet.voting.dialog.step.confirm.line1": "请输入PIN码，它会用于后一个步骤以完成在Catalyst投票应用中的注册程序。",
+  "wallet.voting.dialog.step.pin.line1": "请写下该PIN码，它会用于后一个步骤以完成在Catalyst投票应用中的注册程序。",
+  "wallet.voting.dialog.step.qr.lineTitle": "使用Catalyst 投票应用扫描此二维码",
+  "wallet.voting.dialog.step.qr.line2": "下方的二维码是Catalyst应用需要的证书，能够用于在Cardano网络上参与投票。",
+  "wallet.voting.dialog.step.qr.line3": "此外我们建议您截图作为备份 - 在点击完成后你无法再次获得该二维码。",
+  "wallet.voting.dialog.step.register.line1": "输入支付密码以生成用于投票所需的证书。",
+  "wallet.voting.lineTitle": "用于投票交易的ADA将会从选定的钱包转移支付。",
+  "wallet.voting.line2": "在您开始之前，请确保完成了下列步骤",
+  "wallet.voting.line3": "下载Catalyst 投票应用。",
+  "wallet.voting.line4": "打开Catalyst投票应用，点击完成注册按钮。",
+  "wallet.voting.dialog.step.trx.line1": "确认您的支付密码，将之前生成的用于投票的证书在区块链网络中注册。",
   "wallet.voting.dialog.stepPin": "PIN",
-  "wallet.voting.dialog.stepConfirm": "Confirm",
-  "wallet.voting.dialog.registerLabel": "Register",
-  "wallet.voting.dialog.transactionLabel": "Transaction",
-  "wallet.voting.dialog.stepQrCode": "QR Code",
-  "wallet.voting.dialog.title": "Register for Voting",
-  "wallet.voting.dialog.confirmPin": "Confirm PIN",
-  "wallet.voting.dialog.completeLabel": "Complete",
-  "global.errors.pinDoesNotMatch": "Pin Does Not Match",
-  "global.errors.invalidPin": "Invalid Pin",
-  "button.buySellAda": "Buy/Sell ADA"
+  "wallet.voting.dialog.stepConfirm": "确认",
+  "wallet.voting.dialog.registerLabel": "注册",
+  "wallet.voting.dialog.transactionLabel": "交易",
+  "wallet.voting.dialog.stepQrCode": "二维码",
+  "wallet.voting.dialog.title": "注册以投票",
+  "wallet.voting.dialog.confirmPin": "确认PIN",
+  "wallet.voting.dialog.completeLabel": "完成",
+  "global.errors.pinDoesNotMatch": "PIN码不匹配",
+  "global.errors.invalidPin": "无效的PIN码",
+  "button.buySellAda": "买/卖 ADA"
 }
